--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 application.args=-1
 compile.on.save=true
-user.properties.file=C:\\Users\\Stationary\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+user.properties.file=/Users/Kristoffer/Library/Application Support/NetBeans/8.0.2/build.properties
